# Law_Mate

./: .gitignore  docker-compose.yml  pyproject.toml
src/config/: __init__.py
src/user/models/: model.py
